--- a/OBS_Control_API.csproj
+++ b/OBS_Control_API.csproj
@@ -70,6 +70,9 @@
     <Reference Include="RumbleModdingAPI">
       <HintPath>Z:\RUMBLE\RUMBLE_install\Mods\RumbleModdingAPI.dll</HintPath>
     </Reference>
+    <Reference Include="ModUI">
+      <HintPath>Z:\RUMBLE\RUMBLE_install\Mods\ModUI.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
